--- a/saas_app/templates/approve/view_all_requests.html
+++ b/saas_app/templates/approve/view_all_requests.html
@@ -6,30 +6,26 @@
 {% block head_title %}{% trans "Saas Procurement App" %}{% endblock %}
 
 {% block content %}
-  <h1>SAAS requests awaiting approval</h1>
+  <h1>{% trans "SAAS requests awaiting approval" %}</h1>
     {% if user_approval_needed_requests %}
-      <p> List of requests awaiting approval</p>
+      <p>{% trans "List of requests awaiting approval" %}</p>
       <table class="table table-hover table-bordered">
         <thead>
           <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col">Url</th>
-            <th scope="col">Cost</th>
-            <th scope="col">Date Submitted</th>
-            <th scope="col">Manager</th>
-            <th scope="col">Status</th>
+            <th scope="col">{% trans "Name" %}</th>
+            <th scope="col">{% trans "Description" %}</th>
+            <th scope="col">{% trans "Url" %}</th>
+            <th scope="col">{% trans "Cost" %}</th>
+            <th scope="col">{% trans "Date Submitted" %}</th>
+            <th scope="col">{% trans "Manager" %}</th>
+            <th scope="col">{% trans "Status" %}</th>
             <tbody class="table-group-divider"></tbody>
           </tr>
         </thead>
         <tbody>
         {% for saas_request in user_approval_needed_requests %}
              <tr>
-             {% if saas_request.status == 'Request submitted' %}
-                <td><a href="/approve/view/{{saas_request.pk}}">{{ saas_request.name}} </a></td>
-              {% else %}
-                <td><a href="/approve/view_s32/{{saas_request.pk}}">{{ saas_request.name}} </a> </td>
-              {% endif %}
+              <td><a href="{{saas_request.pk}}">{{ saas_request.name}} </a></td>
               <td>{{ saas_request.description }}</td>
               <td>{{ saas_request.url }}</td>
               <td>{{ saas_request.cost }}</td>
@@ -42,10 +38,10 @@
     </table>
     <br>
     {% else %}
-      <h4> You have no requests awaiting approval</h4><br>
+      <h4>{% trans "You have no requests awaiting approval" %}</h4><br>
     {% endif %}
  {% if all_approval_needed_requests %}
-  <h4>Requests that have been previously reviewed by you</h4>
+  <h4>{% trans "Requests that have been previously reviewed by you" %}</h4>
     <table class="table table-hover table-bordered">
       <thead>
         <tr>
@@ -74,7 +70,7 @@
       </tbody> 
   </table>
   {% else %}
-    <h4> You have no requests that have been previously reviewed by you</h4><br>
+    <h4>{% trans "You have no requests that have been previously reviewed by you" %}</h4><br>
   {% endif %}
-    <button type="button" class="btn btn-primary btn-lg" name="home" onclick="location.href='{% url 'home' %}'">Cancel</button>
+    <button type="button" class="btn btn-primary btn-lg" name="home" onclick="location.href='{% url 'home' %}'">{% trans "Cancel" %}</button>
 {% endblock %}
