--- a/saas_app/templates/request/saas_edited.html
+++ b/saas_app/templates/request/saas_edited.html
@@ -6,6 +6,6 @@
 {% block head_title %}{% trans "Saas Procurement App" %}{% endblock %}
 
 {% block content %}
-    <h1>Thank you for editing your Software as a Service Request Form!</h1>
-    <p>The request has been upated and the approver will be notified.</p>
+    <h1>{% trans "Thank you for editing your Software as a Service Request Form!" %}</h1>
+    <p>{% trans "The request has been upated and the approver will be notified." %}</p>
 {% endblock %}
