--- a/saas_app/templates/request/saas_request.html
+++ b/saas_app/templates/request/saas_request.html
@@ -16,8 +16,8 @@
     In this form, you may select your current supervisor to approve of this purchase. Internal Ops will then get fund centre manager financial approval.
     
     For further information or guidance on subscription services, please talk to the Internal Operations team. {% endblocktrans %}</p>
-<p><a href="https://docs.google.com/document/d/1Vc3cKhlCvakHylmKQQEHc44tffLO7lozQ74aHHRQq2o/edit#heading=h.49a16cu36wcw">Guide to requesting low-dollar value unclassified software subscription services</a></p>   
-<a href="https://docs.google.com/spreadsheets/d/1IfwCl6IkeD4v-OfB90XpeoS26IOdYW_sfQxRhvavc1E/edit#gid=0">CDS Subscription Services - Billing and Admin</a></p>
+<p><a href="https://docs.google.com/document/d/1Vc3cKhlCvakHylmKQQEHc44tffLO7lozQ74aHHRQq2o/edit#heading=h.49a16cu36wcw">{% trans "Guide to requesting low-dollar value unclassified software subscription services" %}</a></p>   
+<a href="https://docs.google.com/spreadsheets/d/1IfwCl6IkeD4v-OfB90XpeoS26IOdYW_sfQxRhvavc1E/edit#gid=0">{% trans "CDS Subscription Services - Billing and Admin" %}</a></p>
 <form method="post" novalidate>
         {% csrf_token %}
         {% crispy form %}
