--- a/saas_app/templates/request/thanks.html
+++ b/saas_app/templates/request/thanks.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% trans "Saas Procurement App" %}{% endblock %}
 
 {% block content %}
-    <h1>Thank you for submitting the Software as a Service Request Form!</h1>
-    <p>This is the overall process that can be expected.</p>
+    <h1>{% trans "Thank you for submitting the Software as a Service Request Form!" %}</h1>
+    <p>{% trans "This is the overall process that can be expected." %}</p>
     <img src="{% static 'saas_app/img/approval_flow.png' %}" alt="Saas Process" width="750">
 {% endblock %}
