--- a/saas_app/templates/search.html
+++ b/saas_app/templates/search.html
@@ -6,15 +6,15 @@
 {% block head_title %}{% trans "Saas Procurement App" %}{% endblock %}
 
 {% block content %}
-    <h1> Search Results</h1>
+    <h1>{% trans "Search Results" %}</h1>
     {% if results %}
         {% for result in results %} 
             <div class="list-group">
-                <a href="/search/{{result.pk}}" class="list-group-item list-group-item-action">{{ result.name }}</a>
+                <a href="{{result.pk}}" class="list-group-item list-group-item-action">{{ result.name }}</a>
             </div>
         {% endfor %}
     {% else %}
-        <p> No results found </p>
+        <p>{% trans "No results found" %} </p>
     {% endif %}
 
 {% endblock %}
