--- a/saas_app/templates/index.html
+++ b/saas_app/templates/index.html
@@ -7,60 +7,60 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-    <h1> Welcome {{user}}!</h1>
-    <p>What do you want to do today?</p></br>
+    <h1>{% trans "Welcome" %} {{user}}!</h1>
+    <p>{% trans "What do you want to do today?" %}</p></br>
     <div class="card">
       <div class="card-header">
-        Submit a SAAS Request
+        {% trans "Submit a SAAS Request" %}
       </div>
       <div class="card-body">
-        <h5 class="card-title">Software as a Service Request Form</h5>
-        <p class="card-text">Please fill out this form if you would like to request the purchase of an unclassified software subscription service.</p>
-        <a href="submit_request" class="btn btn-primary">Start</a>
+        <h5 class="card-title">{% trans "Software as a Service Request Form" %}</h5>
+        <p class="card-text">{% trans "Please fill out this form if you would like to request the purchase of an unclassified software subscription service." %}</p>
+        <a href="submit_request" class="btn btn-primary">{% trans "Start" %}</a>
       </div>
     </div>
     <br>
     <div class="card">
       <div class="card-header">
-        View requests
+        {% trans "View requests" %}
       </div>
       <div class="card-body">
-        <h5 class="card-title">View your submitted requests</h5>
-        <p class="card-text">Click here to view all of your submitted SAAS requests.</p>
-        <a href="submit_request/view" class="btn btn-primary">Start</a>
+        <h5 class="card-title">{% trans "View your submitted requests" %}</h5>
+        <p class="card-text">{% trans "Click here to view all of your submitted SAAS requests." %}</p>
+        <a href="submit_request/view" class="btn btn-primary">{% trans "Start" %}</a>
       </div>
     </div>
     <br>
     <div class="card">
       <div class="card-header">
-        Manager Approve/Deny
+        {% trans "Manager Approve/Deny" %}
       </div>
       <div class="card-body">
-        <h5 class="card-title">Manager - Approve/Deny requests</h5>
-        <p class="card-text">For manager, click here to approve/deny existing requests.</p>
-        <a href="approve/view" class="btn btn-primary">Start</a>
+        <h5 class="card-title">{% trans "Manager - Approve/Deny requests" %}</h5>
+        <p class="card-text">{% trans "For manager, click here to approve/deny existing requests." %}</p>
+        <a href="approve/view" class="btn btn-primary">{% trans "Start" %}</a>
       </div>
     </div>
     <br>
      <div class="card">
       <div class="card-header">
-        Internal Ops
+        {% trans "Internal Ops" %}
       </div>
       <div class="card-body">
-        <h5 class="card-title">View requests</h5>
-        <p class="card-text">For internal ops, click here to view requests, select S32 approver or record a purchase.</p>
-        <a href="internal_ops/view" class="btn btn-primary">Start</a>
+        <h5 class="card-title">{% trans "View requests" %}</h5>
+        <p class="card-text">{% trans "For internal ops, click here to view requests, select S32 approver or record a purchase." %}</p>
+        <a href="internal_ops/view" class="btn btn-primary">{% trans "Start" %}</a>
       </div>
     </div>
     <br>
     <div class="card">
       <div class="card-header">
-        S32 Approver
+        {% trans "S32 Approver" %}
       </div>
       <div class="card-body">
-        <h5 class="card-title">View requests</h5>
-        <p class="card-text">For S32 Approver - click here to approve or deny requests.</p>
-        <a href="approve/view_s32" class="btn btn-primary">Start</a>
+        <h5 class="card-title">{% trans "View requests" %}</h5>
+        <p class="card-text">{% trans "For S32 Approver - click here to approve or deny requests." %}</p>
+        <a href="approve/view_s32" class="btn btn-primary">{% trans "Start" %}</a>
       </div>
     </div>
 {% else %}
