--- a/saas_app/templates/internal_ops/view_request.html
+++ b/saas_app/templates/internal_ops/view_request.html
@@ -19,7 +19,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="request_info_label">New message</h5>
+        <h5 class="modal-title" id="request_info_label">{% trans "New message to requestor" %}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -28,12 +28,12 @@
         <form action="send_mail" method="post" novalidate>
           <div class="form-group">
             {% csrf_token %}
-            <label for="message-text" class="col-form-label">Message:</label>
+            <label for="message-text" class="col-form-label">{% trans "Message:" %}</label>
             <textarea class="form-control" name="info_requested" id="message-text" rows="7"></textarea>
           </div>
           <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary" name="submit" Value="Submit">Send message</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans "Close" %}</button>
+          <button type="submit" class="btn btn-primary" name="submit" Value="Submit">{% trans "Send message" %}</button>
           </div>
         </form>
       </div>
@@ -46,7 +46,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Record Purchase Information</h5>
+        <h5 class="modal-title" id="exampleModalLabel">{% trans "Record Purchase Information" %}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -55,28 +55,28 @@
         <form action="purchase" method="POST" novalidate>
          {% csrf_token %}
           <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Purchase Date:</label>
+            <label for="recipient-name" class="col-form-label"{% trans "Purchase Date:" %}</label>
             <input type="date" class="form-control" name="purchase-date" id="purchase-date">
           </div>
           <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Purchase Amount:</label>
+            <label for="recipient-name" class="col-form-label">{% trans "Purchase Amount:" %}</label>
             <input type="number" min="1" step="any" class="form-control" name="purchase-amount" id="purchase-amount">
           </div>
           <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Purchase Method:</label>
+            <label for="recipient-name" class="col-form-label">{% trans "Purchase Method:" %}</label>
             <input type="text" class="form-control" name="purchase-method" id="purchase-method">
           </div>
           <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Confirmation Number:</label>
+            <label for="recipient-name" class="col-form-label">{% trans "Confirmation Number:" %}</label>
             <input type="text" class="form-control" name="confirmation-number" id="confirmation-number">
           </div>
           <div class="form-group">
-            <label for="message-text" class="col-form-label">Purchase Notes:</label>
+            <label for="message-text" class="col-form-label">{% trans "Purchase Notes:" %}</label>
             <textarea class="form-control" name="purchase-notes" id="purchase-notes"></textarea>
           </div>
            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary" name="submit" Value="Submit">Save</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans "Close" %}</button>
+            <button type="submit" class="btn btn-primary" name="submit" Value="Submit">{% trans "Save" %}</button>
           </div>
         </form>
       </div>
@@ -84,14 +84,4 @@
     </div>
   </div>
 </div>
-<script>
- $('#request_info_modal').on('show.bs.modal', function (event) {
-    var button = $(event.relatedTarget) // Button that triggered the modal
-    var recipient = "SAAS requestor"
-    // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
-    var modal = $(this)
-    modal.find('.modal-title').text('New message to requestor')
-    modal.find('.modal-body input').val(recipient)
-  })
-  </script> 
 {% endblock %}
