--- a/saas_app/templates/request/saas_deleted.html
+++ b/saas_app/templates/request/saas_deleted.html
@@ -6,6 +6,6 @@
 {% block head_title %}{% trans "Saas Procurement App" %}{% endblock %}
 
 {% block content %}
-    <h1>Your Software as a Service Request Form has been deleted!</h1>
-    <p>Your approver will be notified of the deletion. If this was done by mistake, please enter a new Saas Request.</p>
+    <h1>{% trans "Your Software as a Service Request Form has been deleted!" %}</h1>
+    <p>{% trans "Your approver will be notified of the deletion. If this was done by mistake, please enter a new Saas Request." %}</p>
 {% endblock %}
