--- a/saas_app/templates/base.html
+++ b/saas_app/templates/base.html
@@ -87,7 +87,7 @@
                   </li>
                 </ul>
               <form name="search" class="form-inline my-2 my-lg-0" action="{% url 'search' %}">
-                <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <input name="search" class="form-control mr-sm-2" type="search" placeholder={% trans "Search" %} aria-label="Search">
                   <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">{% trans "Search" %}</button>
               </form>
             </div>
