--- a/saas_app/templates/base.html
+++ b/saas_app/templates/base.html
@@ -41,13 +41,22 @@
               </div>
 
               <nav class="nav--header" aria-label="Language and account navigation">
-               <ul>
+              {% get_current_language as CURRENT_LANGUAGE %}
+              {% get_available_languages as AVAILABLE_LANGUAGES %}
+              {% get_language_info_list for AVAILABLE_LANGUAGES as languages %}
+               <div class="languages">
+              <ul class="languages">
+                {% for language in languages %}
                 <li>
-                  <h2 class="visually-hidden">Language selection</h2>
-                  <a href="./fr.htm">Français</a>
-                </li>
-               </ul>
-              </nav>
+                   <a href="/{{ language.code }}/{{request.get_full_path|slice:"4:"}}"
+                  {% if language.code == CURRENT_LANGUAGE %} class="active"{% endif %}>
+                    {{ language.name_local|title }} 
+              </a>
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+       </nav>
               </div>
              </div>
             <div class="page--container">
@@ -63,7 +72,7 @@
          {% block page_content %}
            {% if user.is_authenticated %}
              <nav class="navbar navbar-expand-lg navbar-light bg-light">
-             <a class="navbar-brand" href="{% url 'home' %}">Home</a>
+             <a class="navbar-brand" href="{% url 'home' %}">{% trans "Home" %}</a>
              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
              </button>
@@ -71,15 +80,15 @@
              <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'socialaccount_connections' %}">Google Accounts <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'socialaccount_connections' %}">{% trans "Google Accounts" %} <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a>
+                    <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
                   </li>
                 </ul>
               <form name="search" class="form-inline my-2 my-lg-0" action="{% url 'search' %}">
-                <input name="search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+                <input name="search" class="form-control mr-sm-2" type="search" placeholder={% trans "Search" %} aria-label="Search">
+                  <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">{% trans "Search" %}</button>
               </form>
             </div>
            </nav>
