--- a/saas_app/templates/internal_ops/view_all_requests.html
+++ b/saas_app/templates/internal_ops/view_all_requests.html
@@ -58,7 +58,7 @@
       <tbody>
         {% for saas_request in purchase_needed_requests %}
             <tr>
-            <td>{{ saas_request.name}} </td>
+            <td><a href="{{saas_request.pk}}">{{ saas_request.name}} </a></td>
             <td>{{ saas_request.description }}</td>
             <td>{{ saas_request.url }}</td>
             <td>{{ saas_request.cost }}</td>
