--- a/saas_app/templates/internal_ops/view_request.html
+++ b/saas_app/templates/internal_ops/view_request.html
@@ -40,8 +40,7 @@
     </div>
   </div>
 </div>
-
-
+{% get_current_language as CURRENT_LANGUAGE %}
 <div class="modal fade" id="purchase_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -56,7 +55,7 @@
          {% csrf_token %}
           <div class="form-group">
             <label for="recipient-name" class="col-form-label"{% trans "Purchase Date:" %}</label>
-            <input type="date" class="form-control" name="purchase-date" id="purchase-date">
+            <input type="date" class="form-control" name="purchase-date" id="purchase-date" lang="{{CURRENT_LANGUAGE}}">
           </div>
           <div class="form-group">
             <label for="recipient-name" class="col-form-label">{% trans "Purchase Amount:" %}</label>
