Adding button UI fixes so that the buttons look more uniform now.

--- a/saas_app/templates/approve/view_all_requests.html
+++ b/saas_app/templates/approve/view_all_requests.html
@@ -72,5 +72,5 @@
   {% else %}
     <h4>{% trans "You have no requests that have been previously reviewed by you" %}</h4><br>
   {% endif %}
-    <button type="button" class="btn btn-primary btn-lg" name="home" onclick="location.href='{% url 'home' %}'">{% trans "Cancel" %}</button>
+    <button type="button" class="btn btn-primary" name="home" onclick="location.href='{% url 'home' %}'">{% trans "Cancel" %}</button>
 {% endblock %}
