--- a/saas_app/templates/internal_ops/view_all_requests.html
+++ b/saas_app/templates/internal_ops/view_all_requests.html
@@ -104,5 +104,5 @@
 {% else %}
   <h4>{% trans "You have no requests that are awaiting to be approved by the S32 approver" %}</h4><br>
 {% endif %}
-    <button type="button" class="btn btn-primary btn-lg" name="home" onclick="location.href='{% url 'home' %}'">{% trans "Cancel" %}</button>
+    <button type="button" class="btn btn-primary" name="home" onclick="location.href='{% url 'home' %}'">{% trans "Cancel" %}</button>
 {% endblock %}
