--- a/saas_app/templates/base.html
+++ b/saas_app/templates/base.html
@@ -72,24 +72,37 @@
          {% block page_content %}
            {% if user.is_authenticated %}
              <nav class="navbar navbar-expand-lg navbar-light bg-light">
+             <div class="container-fluid">
              <a class="navbar-brand" href="{% url 'home' %}">{% trans "Home" %}</a>
              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
              </button>
-
              <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'socialaccount_connections' %}">{% trans "Google Accounts" %} <span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
+                  {% if testing_feature_flag %}
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+                      Switch Roles 
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="{% url 'switch_role' %}?role=Requestor">Requestor</a></li>
+                      <li><a class="dropdown-item" href="{% url 'switch_role' %}?role=Manager">Manager</a></li>
+                      <li><a class="dropdown-item" href="{% url 'switch_role' %}?role=InternalOps">Internal Ops</a></li>
+                      <li><a class="dropdown-item" href="{% url 'switch_role' %}?role=S32Approver">S32 Approver</a></li>
+                    </ul>
                   </li>
-                </ul>
+                  {% endif %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
+                </li>
               <form name="search" class="form-inline my-2 my-lg-0" action="{% url 'search' %}">
                 <input name="search" class="form-control mr-sm-2" type="search" placeholder={% trans "Search" %} aria-label="Search">
                   <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">{% trans "Search" %}</button>
               </form>
+            </div>
             </div>
            </nav>
            <br>
