--- a/saas_app/templates/base.html
+++ b/saas_app/templates/base.html
@@ -91,6 +91,9 @@
                   <a class="dropdown-item" href="{% url 'switch_role' %}?role=S32Approver">{% trans "S32 Approver" %}</a>
                 </div>
               </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a>
+            </li>
             </ul>
             <form name="search" class="form-inline my-2 my-lg-0" action="{% url 'search' %}">
               <input name="search" class="form-control mr-sm-2" type="search" placeholder={% trans "Search" %}  aria-label="Search">
