--- a/saas_app/templates/internal_ops/view_all_requests.html
+++ b/saas_app/templates/internal_ops/view_all_requests.html
@@ -6,9 +6,9 @@
 {% block head_title %}{% trans "Saas Procurement App" %}{% endblock %}
 
 {% block content %}
-  <h1>{% trans "SAAS requests awaiting s32 approval" %}</h1>
+  <h1>{% trans "SAAS requests" %}</h1>
     {% if s32_approval_needed_requests %}
-      <p>{% trans "List of requests waiting to be sent for s32 approval" %}</p>
+      <h4>{% trans "List of requests waiting to be sent for s32 approval" %}</h4>
       <table class="table table-hover table-bordered">
         <thead>
           <tr>
@@ -38,7 +38,7 @@
     </table>
     <br>
     {% else %}
-      <h4>{% trans "You have no requests awaiting approval" %}</h4><br>
+      <h4>{% trans "You have no requests waiting to be sent for S32 approval" %}</h4><br>
     {% endif %}
 {% if purchase_needed_requests %}
  <h4>{% trans "Requests that have been s32 approved awaiting purchase" %}</h4>
@@ -71,38 +71,6 @@
 </table>
 {% else %}
   <h4>{% trans "You have no requests awaiting purchase" %}</h4><br>
-{% endif %}
-{% if s32_approval_waiting_requests %}
- <h4>{% trans "Requests that have been sent to the S32 approver and are awaiting approval" %}</h4>
-  <table class="table table-hover table-bordered">
-    <thead>
-        <tr>
-          <th scope="col">{% trans "Name" %}</th>
-          <th scope="col">{% trans "Description" %}</th>
-          <th scope="col">{% trans "Url" %}</th>
-          <th scope="col">{% trans "Cost" %}</th>
-          <th scope="col">{% trans "Date Submitted" %}</th>
-          <th scope="col">{% trans "Manager" %}</th>
-          <th scope="col">{% trans "Status" %}</th>
-          <tbody class="table-group-divider"></tbody>
-        </tr>
-      </thead>
-      <tbody>
-        {% for saas_request in s32_approval_waiting_requests %}
-            <tr>
-            <td>{{ saas_request.name}} </td>
-            <td>{{ saas_request.description }}</td>
-            <td>{{ saas_request.url }}</td>
-            <td>{{ saas_request.cost }}</td>
-            <td>{{ saas_request.date_submitted }}</td>
-            <td>{{ saas_request.manager }}</td>
-            <td>{{ saas_request.status }}</td>
-        </tr>
-        {% endfor %}
-      </tbody> 
-</table>
-{% else %}
-  <h4>{% trans "You have no requests that are awaiting to be approved by the S32 approver" %}</h4><br>
 {% endif %}
     <button type="button" class="btn btn-primary" name="home" onclick="location.href='{% url 'home' %}'">{% trans "Cancel" %}</button>
 {% endblock %}
